[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/art/spritesheet.png" type="Texture" id=1]
[ext_resource path="res://hazards/ufo.gd" type="Script" id=2]
[ext_resource path="res://assets/sfx/ufo_abduction.wav" type="AudioStream" id=3]
[ext_resource path="res://assets/sfx/ufo_flying.wav" type="AudioStream" id=4]

[sub_resource type="CanvasItemMaterial" id=1]
blend_mode = 1

[sub_resource type="Gradient" id=2]
offsets = PoolRealArray( 0.873134, 1 )
colors = PoolColorArray( 0.803922, 0.968627, 0.886275, 1, 0.803922, 0.968627, 0.886275, 0 )

[sub_resource type="GradientTexture" id=3]
gradient = SubResource( 2 )

[sub_resource type="ParticlesMaterial" id=4]
emission_shape = 2
emission_box_extents = Vector3( 8, 3, 1 )
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 3 )

[sub_resource type="Gradient" id=5]
offsets = PoolRealArray( 0.873134, 1 )
colors = PoolColorArray( 0.572549, 0.862745, 0.729412, 1, 0.803922, 0.968627, 0.886275, 0 )

[sub_resource type="GradientTexture" id=6]
gradient = SubResource( 5 )

[sub_resource type="ParticlesMaterial" id=7]
emission_shape = 2
emission_box_extents = Vector3( 16, 6, 1 )
flag_disable_z = true
gravity = Vector3( 0, -10, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
color_ramp = SubResource( 6 )

[sub_resource type="Animation" id=8]
resource_name = "default"
length = 0.1
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("ufo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, -208 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("beam:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 0.403922, 0.517647, 0.466667, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("light:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("beam:polygon")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ PoolVector2Array( -8, -208, 8, -208, 24, -2, 24, 2, 23, 2, 23, 3, 22, 3, 22, 4, 21, 4, 21, 5, 20, 5, 20, 6, 18, 6, 18, 7, 15, 7, 15, 8, 12, 8, 12, 9, 7, 9, 7, 10, 0, 10, -7, 10, -7, 9, -12, 9, -12, 8, -15, 8, -15, 7, -18, 7, -18, 6, -20, 6, -20, 5, -21, 5, -21, 4, -22, 4, -22, 3, -23, 3, -23, 2, -24, 2, -24, -2 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"values": [  ]
}

[sub_resource type="Animation" id=9]
length = 13.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("ufo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, -64 ), Vector2( 0, -208 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("beam:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 0.403922, 0.517647, 0.466667, 0.501961 ), Color( 0.403922, 0.517647, 0.466667, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("light:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 1, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("beam:polygon")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ PoolVector2Array( -8, -64, 8, -64, 24, -2, 24, 2, 23, 2, 23, 3, 22, 3, 22, 4, 21, 4, 21, 5, 20, 5, 20, 6, 18, 6, 18, 7, 15, 7, 15, 8, 12, 8, 12, 9, 7, 9, 7, 10, 0, 10, -7, 10, -7, 9, -12, 9, -12, 8, -15, 8, -15, 7, -18, 7, -18, 6, -20, 6, -20, 5, -21, 5, -21, 4, -22, 4, -22, 3, -23, 3, -23, 2, -24, 2, -24, -2 ), PoolVector2Array( -8, -208, 8, -208, 24, -2, 24, 2, 23, 2, 23, 3, 22, 3, 22, 4, 21, 4, 21, 5, 20, 5, 20, 6, 18, 6, 18, 7, 15, 7, 15, 8, 12, 8, 12, 9, 7, 9, 7, 10, 0, 10, -7, 10, -7, 9, -12, 9, -12, 8, -15, 8, -15, 7, -18, 7, -18, 6, -20, 6, -20, 5, -21, 5, -21, 4, -22, 4, -22, 3, -23, 3, -23, 2, -24, 2, -24, -2 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 10 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_restart"
} ]
}

[sub_resource type="Animation" id=10]
length = 4.0
step = 1.0
tracks/0/type = "value"
tracks/0/path = NodePath("ufo:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ Vector2( 0, -208 ), Vector2( 0, -208 ), Vector2( 0, -64 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("beam:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.403922, 0.517647, 0.466667, 0 ), Color( 0.403922, 0.517647, 0.466667, 0 ), Color( 0.403922, 0.517647, 0.466667, 0.501961 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("light:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1e-05, 1e-05 ), Vector2( 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Particles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("beam:polygon")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 2, 4 ),
"transitions": PoolRealArray( 1, -2, 1 ),
"update": 0,
"values": [ PoolVector2Array( -8, -208, 8, -208, 24, -2, 24, 2, 23, 2, 23, 3, 22, 3, 22, 4, 21, 4, 21, 5, 20, 5, 20, 6, 18, 6, 18, 7, 15, 7, 15, 8, 12, 8, 12, 9, 7, 9, 7, 10, 0, 10, -7, 10, -7, 9, -12, 9, -12, 8, -15, 8, -15, 7, -18, 7, -18, 6, -20, 6, -20, 5, -21, 5, -21, 4, -22, 4, -22, 3, -23, 3, -23, 2, -24, 2, -24, -2 ), PoolVector2Array( -8, -208, 8, -208, 24, -2, 24, 2, 23, 2, 23, 3, 22, 3, 22, 4, 21, 4, 21, 5, 20, 5, 20, 6, 18, 6, 18, 7, 15, 7, 15, 8, 12, 8, 12, 9, 7, 9, 7, 10, 0, 10, -7, 10, -7, 9, -12, 9, -12, 8, -15, 8, -15, 7, -18, 7, -18, 6, -20, 6, -20, 5, -21, 5, -21, 4, -22, 4, -22, 3, -23, 3, -23, 2, -24, 2, -24, -2 ), PoolVector2Array( -8, -64, 8, -64, 24, -2, 24, 2, 23, 2, 23, 3, 22, 3, 22, 4, 21, 4, 21, 5, 20, 5, 20, 6, 18, 6, 18, 7, 15, 7, 15, 8, 12, 8, 12, 9, 7, 9, 7, 10, 0, 10, -7, 10, -7, 9, -12, 9, -12, 8, -15, 8, -15, 7, -18, 7, -18, 6, -20, 6, -20, 5, -21, 5, -21, 4, -22, 4, -22, 3, -23, 3, -23, 2, -24, 2, -24, -2 ) ]
}
tracks/6/type = "method"
tracks/6/path = NodePath(".")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 4 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "_set_active"
} ]
}

[node name="ufo" type="Node2D"]
z_index = 1
script = ExtResource( 2 )

[node name="beam" type="Polygon2D" parent="."]
modulate = Color( 0.403922, 0.517647, 0.466667, 0 )
material = SubResource( 1 )
position = Vector2( 0, -8 )
z_index = 4
polygon = PoolVector2Array( -8, -208, 8, -208, 24, -2, 24, 2, 23, 2, 23, 3, 22, 3, 22, 4, 21, 4, 21, 5, 20, 5, 20, 6, 18, 6, 18, 7, 15, 7, 15, 8, 12, 8, 12, 9, 7, 9, 7, 10, 0, 10, -7, 10, -7, 9, -12, 9, -12, 8, -15, 8, -15, 7, -18, 7, -18, 6, -20, 6, -20, 5, -21, 5, -21, 4, -22, 4, -22, 3, -23, 3, -23, 2, -24, 2, -24, -2 )
__meta__ = {
"_edit_lock_": true
}

[node name="light" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.423529 )
position = Vector2( 0, -8 )
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 80, 224, 48, 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="ufo" type="Sprite" parent="."]
position = Vector2( 0, -208 )
z_index = 5
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 128, 224, 48, 32 )
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 0, -8 )
z_index = 1
emitting = false
amount = 16
lifetime = 3.0
process_material = SubResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Particles2D2" type="Particles2D" parent="."]
position = Vector2( 0, -8 )
z_index = 1
emitting = false
amount = 16
lifetime = 3.0
process_material = SubResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="anim" type="AnimationPlayer" parent="."]
autoplay = "default"
anims/default = SubResource( 8 )
anims/end = SubResource( 9 )
anims/start = SubResource( 10 )

[node name="life_timer" type="Timer" parent="."]
one_shot = true

[node name="npc_tween" type="Tween" parent="."]

[node name="ufo_landing" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "sfx"

[node name="ufo_abduction" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
[connection signal="timeout" from="life_timer" to="." method="_on_life_timer_timeout"]
[connection signal="tween_all_completed" from="npc_tween" to="." method="_on_npc_tween_tween_all_completed"]
